feat: add get item by id
